Some styling and align fixes

--- a/src/main/webapp/css/actions.css
+++ b/src/main/webapp/css/actions.css
@@ -29,3 +29,9 @@
 td .fa-action {
     padding: 12px;
 }
+
+@media print {
+    .fa-action {
+        display: none;
+    }
+}
